--- a/biography.html
+++ b/biography.html
@@ -10,7 +10,24 @@
     
 </style>
 <body>
-    <p>
+    <p>Gru comes from a long line of villains. Although his hometown is unknown, in an interview with Ellen DeGeneres he claimed he was from Albuquerque, New Mexico.
+    As a child he had always dreamed of going to the moon. He made a "prototype" rocket out of macaroni and an actual working prototype rocket. For most of his childhood he was neglected and ignored by his mother.
+    Gru is a tall, bald man with blue eyes, long nose and broad, powerful physique; and dresses in a light grey sweater underneath a black collared coat along with a striped grey scarf, black trousers, and shoes, branded Grucci.
+
+He is very strong and athletic, being capable of dodging and leaping off several heat-seeking missiles (all going at the speed of sound), backhanding Vector's shark with a single punch (with the apparent force of a truck), and smashing his fist into Vector's monitor, easily cracking the screen without doing any damage to his hand.
+
+Apart from his remarkable agility and strength, Gru is also considerably intelligent. For example, as a child he built a real rocket. However since becoming a supervillain he seems to let Dr. Nefario handle most of the mechanical work though he is seen helping Nefario from time to time. Gru is also capable of forming clever plans such as his plan to steal the shrink ray from Vector.
+At first, Gru was a sneaky and somewhat cold-hearted man, who was determined to become the greatest villain in the world. At first he showed a dislike of children being easily irritated by Agnes, Edith and Margo. He was self-centered and in the beginning, he only adopted the girls so that he could get the shrink ray which he intended to use to shrink the moon so that he could steal it.
+
+Gru is also rather cruel and even sadistic at first and enjoyed using his Freeze Ray, which is his signature weapon often freezing people just for the sake of it. Despite these traits, Gru is shown to be good friends with Dr. Nefario and also treated his Minions quite well interacting with them and calling each one of them by name (he can also understand their language) instead of just treating them like slaves. However, he also said that he had no intention of giving his minions a raise.
+
+As time went on, Gru started to enjoy spending time with his three adopted daughters and in the end he grew to genuinely love them, putting aside his dream of stealing the moon and risking his life to rescue them from Vector. Dr. Nefario disapproved of the fact that Gru's warmer side is starting to reveal itself and sent the girls back to the orphanage. Though Gru didn't attempt to stop Miss Hattie from taking them he is clearly upset about them leaving and later said that giving them up is the worst mistake he'd ever made. He also did his best to get to their dance performance after stealing the moon and is upset when he discovered he is too late.
+
+Gru treats all of his minions with kindess; despite the fact that he employs millions of them he is able to idenfity each of them by name and routinely hosts parties and celebrations for them.
+
+Gru also has a tendency to say "lightbulb" whenever he has an idea. He speaks in an unusual accent (probably east European) which, according to Steve Carell, was described as "a mix of Ricardo Montalban and Bela Lugosi". When asked about his accent by Ellen DeGeneres he said he was from Albuquerque, New Mexico and asked Ellen not to push this topic any further.
+
+At the end of the first movie, and throughout the rest of the series, Gru has turned into a softie and became a lot more sweeter, gentler, and friendlier person after adopting Margo, Edith, and Agnes as his own daughters. Gru is currently 54 years old.
 
     </p>
 </body>
